--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "An open sourced, community driven, living document for Epic Games' Verse programming language",
   "main": "index.js",
   "dependencies": {
-    "gitbook": ">= 3.0.0",
+    "gitbook-cli": "^2.3.2",
     "gitbook-plugin-block-code": "^0.0.1",
     "gitbook-plugin-collapsible-menu": "^1.0.3",
     "gitbook-plugin-github": "^2.0.0",
     "gitbook-plugin-heading-anchors": "^1.0.3",
     "gitbook-plugin-richquotes": "^0.0.9"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
