--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/glinesbdev/versus#readme",
   "dependencies": {
+    "gitbook-plugin-code": "^0.1.0",
     "gitbook-plugin-collapsible-menu": "^1.0.3",
     "gitbook-plugin-github": "^2.0.0",
     "gitbook-plugin-heading-anchors": "^1.0.3",
