--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An open sourced, community driven, living document for Epic Games' Verse programming language",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npx honkit serve ."
   },
   "repository": {
     "type": "git",
